--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -14,6 +14,7 @@ http {
 
   server {
     location ~ ^/(css|fonts|js) {
+      open_file_cache max=100;
       root /home/isucon/webapp/static;
     }
 
