--- a/etc/my.cnf
+++ b/etc/my.cnf
@@ -26,6 +26,10 @@ symbolic-links=0
 # Recommended in standard MySQL setup
 sql_mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES 
 
+innodb_buffer_pool_size = 1G
+innodb_flush_log_at_trx_commit = 0
+innodb_flush_method=O_DIRECT
+
 [mysqld_safe]
 log-error=/var/log/mysqld.log
 pid-file=/var/run/mysqld/mysqld.pid
