--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,15 +1,20 @@
 user isucon;
-worker_processes  1;
+worker_processes  8;
 
 events {
-  worker_connections  1024;
+  worker_connections  10240;
+  accept_mutex_delay 100ms;
 }
 
 http {
   include /etc/nginx/mime.types;
 
+  access_log off;
+
+  sendfile on;
+
   upstream php-fpm {
-    server 127.0.0.1:8080;
+    server unix:/home/isucon/.local/php/var/run/php5-fpm.sock;
   }
 
   server {
