--- a/webapp/php/php-fpm.conf
+++ b/webapp/php/php-fpm.conf
@@ -3,7 +3,8 @@ daemonize = no
 [www]
 user = isucon
 group = isucon
-listen = 0.0.0.0:8080
+listen = /home/isucon/.local/php/var/run/php5-fpm.sock
+listen.mode = 0666
 
 pm = dynamic
 pm.max_children = 10
